added Answers by QuestionContent nhung phai them id của Questions